[gd_scene load_steps=40 format=3 uid="uid://qenmagh0s323"]

[ext_resource type="Texture2D" uid="uid://l584mfh6k7vx" path="res://assets/bg_tile.png" id="1_d7sal"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_kstpf"]
[ext_resource type="Script" path="res://scripts/score.gd" id="2_qhh88"]
[ext_resource type="PackedScene" uid="uid://b3p18c2i1ifow" path="res://scenes/flip_board.tscn" id="4_g1vkf"]
[ext_resource type="PackedScene" uid="uid://ttbte0ma1eo6" path="res://scenes/meter.tscn" id="4_qv84x"]
[ext_resource type="Theme" uid="uid://di0g6mbonao3d" path="res://themes/big_text.tres" id="5_r1qfl"]
[ext_resource type="PackedScene" uid="uid://bp86rnvlsxn8o" path="res://scenes/board.tscn" id="8_hikeo"]
[ext_resource type="PackedScene" uid="uid://dnmufuphqvq7h" path="res://assets/models/tia_v.tscn" id="9_qcb26"]
[ext_resource type="PackedScene" uid="uid://dhfyav0my2m5m" path="res://scenes/opponent_portrait.tscn" id="11_mnnac"]
[ext_resource type="Script" path="res://scenes/signal_audio.gd" id="14_bx4to"]
[ext_resource type="AudioStream" uid="uid://drlg7i2v2uik" path="res://assets/sound/knock01.wav" id="15_dcrwb"]
[ext_resource type="AudioStream" uid="uid://cv4bx4ka1bcba" path="res://assets/sound/pop_soft03.wav" id="16_5vhk7"]
[ext_resource type="AudioStream" uid="uid://nytpm0tpkylx" path="res://assets/sound/plonk01.wav" id="17_dyp8m"]
[ext_resource type="AudioStream" uid="uid://dmwuk8au3v8o3" path="res://assets/sound/plonk02.wav" id="17_oxs0j"]
[ext_resource type="AudioStream" uid="uid://cislxs6nfhbcp" path="res://assets/sound/plonk04.wav" id="17_qcbhn"]
[ext_resource type="AudioStream" uid="uid://cf2ubs6jppwva" path="res://assets/sound/degauss_alt01.wav" id="20_7bau0"]
[ext_resource type="Script" path="res://scripts/audio_sequence.gd" id="20_xqkpy"]
[ext_resource type="AudioStream" uid="uid://4y33glpepi7l" path="res://assets/sound/degauss_alt02.wav" id="21_rxidj"]
[ext_resource type="Material" uid="uid://bkmox2j4vjeq1" path="res://assets/shaders/scrolling_texture.tres" id="21_x0ym5"]
[ext_resource type="AudioStream" uid="uid://dbjygpq6ayxth" path="res://assets/sound/degauss_alt03.wav" id="22_8be85"]
[ext_resource type="AudioStream" uid="uid://be8al80nrga4s" path="res://assets/sound/degauss_alt04.wav" id="23_3cfok"]
[ext_resource type="Material" uid="uid://dyxyxq5xlkwj2" path="res://assets/shaders/shard_noise.tres" id="23_cj46f"]
[ext_resource type="AudioStream" uid="uid://bwsoi8rq1yixl" path="res://assets/sound/degauss_alt05.wav" id="24_e7f1a"]
[ext_resource type="PackedScene" uid="uid://c2vo5y6ew8noo" path="res://scenes/health_bar.tscn" id="26_sbdry"]
[ext_resource type="AudioStream" uid="uid://dyxwmw2pc4q74" path="res://assets/sound/degauss01.wav" id="26_wjwbw"]
[ext_resource type="AudioStream" uid="uid://rhh8wa4k0jw6" path="res://assets/sound/thunk_mesh01.wav" id="27_sm2rh"]
[ext_resource type="AudioStream" uid="uid://bimv0khyrwh4" path="res://assets/sound/thunk_mesh02.wav" id="28_wjm3y"]
[ext_resource type="AudioStream" uid="uid://cf5hg4hom5lql" path="res://assets/sound/thunk_mesh03.wav" id="29_0o21r"]
[ext_resource type="AudioStream" uid="uid://cjvo2sbmqd0x6" path="res://assets/sound/thunk_mesh04.wav" id="30_qw0te"]
[ext_resource type="AudioStream" uid="uid://pe03wann1pq1" path="res://assets/sound/boing05.wav" id="31_xcqtw"]
[ext_resource type="AudioStream" uid="uid://dhxuuljn2uaxx" path="res://assets/sound/impact_technic02.wav" id="32_73bde"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_62hhw"]
streams_count = 4
stream_0/stream = ExtResource("27_sm2rh")
stream_1/stream = ExtResource("28_wjm3y")
stream_2/stream = ExtResource("29_0o21r")
stream_3/stream = ExtResource("30_qw0te")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7nvu5"]
size = Vector2(600, 600)

[sub_resource type="ViewportTexture" id="ViewportTexture_b2jd3"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Gradient" id="Gradient_q861v"]
colors = PackedColorArray(0, 0, 0, 1, 0.223103, 0.223103, 0.223103, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ye4ey"]
gradient = SubResource("Gradient_q861v")
width = 4000
height = 3000
fill_from = Vector2(0.0042735, 1)
fill_to = Vector2(0, 0)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fix6b"]
sky_top_color = Color(0.683728, 0.738728, 0.81544, 1)

[sub_resource type="Sky" id="Sky_cug6s"]
sky_material = SubResource("ProceduralSkyMaterial_fix6b")

[sub_resource type="Environment" id="Environment_41vkf"]
background_mode = 2
sky = SubResource("Sky_cug6s")
ambient_light_color = Color(0.374139, 0.374139, 0.374139, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_kstpf")

[node name="SignalAudio" type="Node" parent="."]
script = ExtResource("14_bx4to")

[node name="PlaceSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("15_dcrwb")

[node name="MoveSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("17_oxs0j")
max_polyphony = 2

[node name="MoveSFX2" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("17_dyp8m")
max_polyphony = 2

[node name="BlockedSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("17_qcbhn")
max_polyphony = 2

[node name="RotateSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("16_5vhk7")

[node name="ComboSFX" type="AudioStreamPlayer" parent="SignalAudio"]
script = ExtResource("20_xqkpy")
streams = Array[AudioStreamWAV]([ExtResource("20_7bau0"), ExtResource("21_rxidj"), ExtResource("22_8be85"), ExtResource("23_3cfok"), ExtResource("24_e7f1a")])

[node name="PlaceSFX2" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("15_dcrwb")

[node name="MoveSFX3" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("17_oxs0j")
max_polyphony = 2

[node name="MoveSFX4" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("17_dyp8m")
max_polyphony = 2

[node name="BlockedSFX2" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("17_qcbhn")
max_polyphony = 2

[node name="RotateSFX2" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("16_5vhk7")

[node name="ComboSFX2" type="AudioStreamPlayer" parent="SignalAudio"]
script = ExtResource("20_xqkpy")
streams = Array[AudioStreamWAV]([ExtResource("20_7bau0"), ExtResource("21_rxidj"), ExtResource("22_8be85"), ExtResource("23_3cfok"), ExtResource("24_e7f1a")])

[node name="FallStartSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("26_wjwbw")
volume_db = -3.0
max_polyphony = 4

[node name="FallEndSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = SubResource("AudioStreamRandomizer_62hhw")
volume_db = -5.0
max_polyphony = 4

[node name="PlayerAttackLaunchSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("31_xcqtw")

[node name="PlayerAttackLandSFX" type="AudioStreamPlayer" parent="SignalAudio"]
stream = ExtResource("32_73bde")

[node name="EnemyAttackLaunchSFX" type="AudioStreamPlayer" parent="SignalAudio"]

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="scrolling_texture" type="TextureRect" parent="bg"]
visible = false
material = ExtResource("21_x0ym5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_d7sal")
stretch_mode = 1

[node name="shard_noise" type="TextureRect" parent="bg"]
material = ExtResource("23_cj46f")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_7nvu5")

[node name="OpponentPortrait" parent="." instance=ExtResource("11_mnnac")]
position = Vector2(1568, 384)

[node name="Board" parent="." instance=ExtResource("8_hikeo")]
position = Vector2(768, 64)
board_height = 12
cell_size = 80

[node name="WinText" type="Label" parent="."]
visible = false
offset_left = 884.0
offset_top = 488.0
offset_right = 1117.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 64
text = "Victory!"

[node name="LoseText" type="Label" parent="."]
visible = false
offset_left = 884.0
offset_top = 488.0
offset_right = 1117.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 64
text = "Defeat!"

[node name="BombSocket" type="Node2D" parent="."]
position = Vector2(384, 360)

[node name="HealthBar" parent="." instance=ExtResource("26_sbdry")]
position = Vector2(1270, 683)
initial_value = 10

[node name="AttackMeter" parent="." instance=ExtResource("4_qv84x")]
position = Vector2(1408, 800)
base_color = Color(1, 0, 0, 1)
max_value = 20

[node name="Label" type="Label" parent="AttackMeter"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_bottom = 45.0
grow_horizontal = 0
theme = ExtResource("5_r1qfl")
text = "attack "

[node name="Score" type="Node" parent="."]
script = ExtResource("2_qhh88")

[node name="FlipBoard" parent="Score" instance=ExtResource("4_g1vkf")]
offset_left = 1272.0
offset_top = 896.0
offset_right = 1844.0
offset_bottom = 968.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CharLeft" type="Node2D" parent="."]
position = Vector2(384, 768)

[node name="CharBG" type="Polygon2D" parent="CharLeft"]
color = Color(0.817521, 0.817521, 0.817521, 1)
polygon = PackedVector2Array(-200, -192, -264, 80, -192, 224, 232, 184, 264, -72, 160, -224)

[node name="CharMask_left" type="Polygon2D" parent="CharLeft"]
clip_children = 1
polygon = PackedVector2Array(-184, -176, -264, 80, -192, 208, 232, 184, 248, -64, 160, -224)

[node name="Char3D" type="Sprite2D" parent="CharLeft/CharMask_left"]
texture = SubResource("ViewportTexture_b2jd3")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
screen_space_aa = 1
size = Vector2i(640, 512)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(0.9289, -0.0564509, -0.366002, 0, 0.988314, -0.152434, 0.37033, 0.141596, 0.918045, -1.14881, 0.974069, 2.56243)
fov = 23.4796

[node name="Sprite3D" type="Sprite3D" parent="SubViewport/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -19)
visible = false
texture = SubResource("GradientTexture2D_ye4ey")

[node name="TIA-V_MASTER" parent="SubViewport" instance=ExtResource("9_qcb26")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0612365, 0, -0.0587646)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(0.803069, 0.236603, -0.5469, 0.06022, 0.880869, 0.469514, 0.592836, -0.409986, 0.69315, 2.20665, 2.42911, -0.212508)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewport"]
environment = SubResource("Environment_41vkf")

[node name="SignalAudio2" type="Node" parent="."]
script = ExtResource("14_bx4to")

[connection signal="on_fall_end" from="Board" to="SignalAudio" method="_on_fall_end"]
[connection signal="on_fall_start" from="Board" to="SignalAudio" method="_on_fall_start"]
[connection signal="on_lose" from="Board" to="." method="_on_lose"]
[connection signal="on_pieces_cleared" from="Board" to="." method="_on_pieces_cleared"]
[connection signal="on_pieces_cleared" from="Board" to="SignalAudio" method="_on_pieces_cleared"]
[connection signal="on_pieces_cleared" from="Board" to="Score" method="_on_pieces_cleared"]
[connection signal="on_placed" from="Board" to="." method="_on_placed"]
[connection signal="on_placed" from="Board" to="SignalAudio" method="_on_placed"]
[connection signal="on_player_move" from="Board" to="." method="_on_player_move"]
[connection signal="on_player_move" from="Board" to="SignalAudio" method="_on_player_move"]
[connection signal="on_player_rotate" from="Board" to="SignalAudio" method="_on_player_rotate"]
[connection signal="on_settled" from="Board" to="." method="_on_settled"]
